--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
 // Abstracts
-@use "./scss/abstracts/variables";
-@use "./scss/abstracts/mixins";
+@use './scss/abstracts/variables';
+@use './scss/abstracts/mixins';
 
 // Base
-@use "./scss/base/base";
-@use "./scss/base/resets";
+@use './scss/base/base';
+@use './scss/base/resets';
+
+// Components
