passed styles code to each .scss component file

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,4 +6,19 @@
 @use './scss/base/base';
 @use './scss/base/resets';
 
-// Components
+/******* Components *******/
+
+// NavBar
+@use './components//NavBar/NavBar';
+
+// Items
+@use './components/Items/Items';
+
+// ItemsDetails
+@use './components/ItemsDetails/ItemsDetails';
+
+// Cart
+@use './components/Cart/Cart';
+
+// ItemsCounter
+@use './components/ItemsCounter/ItemsCounter';
