--- a/src/scss/base/_resets.scss
+++ b/src/scss/base/_resets.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .App {
@@ -17,13 +17,19 @@ body {
 
 li {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
   text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
 
 button {
   border: none;
   background: none;
+  margin: 0;
+  padding: 0;
 }
