starting to sintetize OrderCreator, combining yup and formik in high order functions.

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,6 @@
 
 // ItemsCounter
 @use './components/ItemsCounter/ItemsCounter';
+
+// OrderCreator
+@use './components/OrderCreator/OrderCreator';
