OrderCreator lasts details done

--- a/src/components/OrderCreator/_OrderCreator.scss
+++ b/src/components/OrderCreator/_OrderCreator.scss
@@ -14,4 +14,12 @@ section {
       }
     }
   }
+  .order-id-alert {
+    text-align: center;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    width: auto;
+    margin: 2rem 0 0 0;
+  }
 }
