minor improvements in the code structure

--- a/src/main.scss
+++ b/src/main.scss
@@ -28,3 +28,6 @@
 
 // DashBoard
 @use './components/DashBoard/DashBoard';
+
+// CategorySelector
+@use './components/CategorySelector/CategorySelector';
