--- a/src/components/Cart/_Cart.scss
+++ b/src/components/Cart/_Cart.scss
@@ -1,25 +1,30 @@
 .cart-container {
   margin-top: 5rem;
+
   .cart-cards {
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     flex-direction: row;
+
     .cart-img {
-      max-width: 100px;
+      max-width: 10rem;
     }
     .cart-typography-container {
       line-height: 2rem;
       font-size: 1rem;
     }
-  }
-  .cart-btns-container {
-    margin-top: 2em;
-    .cart-proceed-btn {
-      margin-right: 1em;
-    }
-    .empty-cart-btn {
-      margin-left: 1em;
+    .cart-btns-container {
+      margin-top: 2em;
+
+      .cart-proceed-btn {
+        margin-right: 1rem;
+      }
+
+      .cart-clear-btn {
+        margin-left: 1rem;
+      }
     }
   }
 }
