--- a/src/scss/base/_resets.scss
+++ b/src/scss/base/_resets.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(175, 175, 175);
 }
 
 li {
@@ -30,6 +30,16 @@ a {
 button {
   border: none;
   background: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+ol {
   margin: 0;
   padding: 0;
 }
