--- a/src/components/DashBoard/_DashBoard.scss
+++ b/src/components/DashBoard/_DashBoard.scss
@@ -5,6 +5,11 @@
   flex-wrap: wrap;
   flex: 1;
 }
+
 .user-settings-container {
   margin-right: 2rem;
+}
+
+#menu-appbar {
+  margin-top: 3rem;
 }
