--- a/src/components/Items/_Items.scss
+++ b/src/components/Items/_Items.scss
@@ -1,14 +1,13 @@
 .card-btn-item {
   width: 1;
-  height: 30rem;
+  height: 1;
 
   .card-item {
-    width: 1;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-content: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    height: 30rem;
 
     .items-img-container {
       display: flex;
@@ -16,10 +15,9 @@
       align-items: center;
 
       .item-img-card-content {
-        margin-top: 1rem;
-        width: 15rem;
-        height: auto;
-        display: flex;
+        grid-row: 1;
+        grid-column: 1;
+        gap: 1rem;
         justify-content: center;
         align-items: center;
 
