--- a/src/components/Navigator/Header/Searcher/_Searcher.scss
+++ b/src/components/Navigator/Header/Searcher/_Searcher.scss
@@ -1,12 +1,19 @@
 .search {
+  height: 2rem;
   position: relative;
-  border-radius: 4px;
+  border-radius: 0;
+  text-align: center;
   background-color: rgba(255, 255, 255, 0.15);
+  width: 100%;
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.25);
   }
-  width: 100%;
+
+  @media (max-width: 600px) {
+    width: 100%;
+    height: 2rem;
+  }
   @media (min-width: 600px) {
     margin-left: 8px;
     width: auto;
@@ -15,7 +22,7 @@
 
 .search-icon-wrapper {
   padding: 0 16px;
-  height: 100%;
+  height: inherit;
   position: absolute;
   pointer-events: none;
   display: flex;
@@ -25,12 +32,21 @@
 
 .input-base {
   color: inherit;
+  display: flex;
+  justify-content: center;
 
   & .MuiInputBase-input {
+    line-height: inherit;
     padding: 8px 8px 8px 0;
     padding-left: calc(1em + 32px);
     transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     width: 100%;
+    text-align: start;
+    height: inherit;
+
+    @media (max-width: 600px) {
+      width: 100%;
+    }
 
     @media (min-width: 600px) {
       width: 12ch;
