--- a/src/components/Navigator/Header/_Header.scss
+++ b/src/components/Navigator/Header/_Header.scss
@@ -2,23 +2,72 @@ header {
   .header-grid-container {
     justify-content: space-around;
     align-content: center;
-    border: 1px solid black;
     height: 2.5rem;
 
-    .header-grid-items {
-      display: flex;
-      border: 1px solid black;
-      justify-content: space-around;
+    @media (max-width: 600px) {
+      height: 4.5rem;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      height: 2.5rem;
+    }
 
-      .header-menu-items {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        height: 2.5rem;
+    .header-grid-items {
+      border-radius: 0;
+      display: flex;
+      align-items: center;
+      height: 2rem;
+
+      @media (max-width: 600px) {
+        margin-bottom: 3px;
+        height: 2rem;
+        justify-content: center;
+      }
+
+      .header-toolbar {
+        border-radius: 0;
+        padding: 0;
+        margin: 0;
+        height: 2rem;
+
+        .header-menu-items {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+          height: 2.5rem;
+          width: auto;
+          min-width: auto;
+          border-radius: 0;
+
+          @media (max-width: 600px) {
+            height: 2rem;
+            min-width: auto;
+            justify-content: center;
+            align-items: center;
+          }
+
+          .cart-btn {
+            height: 2.5rem;
+            width: 5rem;
+            border-radius: 0;
+
+            @media (max-width: 600px) {
+              width: 3rem;
+              height: 2rem;
+            }
+          }
+        }
       }
     }
+  }
+}
+
+// CartContext
+.cart-icon {
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 0;
+  @media (max-width: 600px) {
+    width: 2.5rem;
+    height: 2rem;
   }
 }
