--- a/src/main.scss
+++ b/src/main.scss
@@ -9,11 +9,21 @@
 /******* Components *******/
 
 /* Navigator */
+
+/* Header */
 @use './components/Navigator/Header/Header';
 
+@use './components/Navigator/Header/DashBoard/DashBoard';
+
+@use './components/Navigator/Header/Searcher/Searcher';
+/* Header */
+
+// NavBar
 @use './components/Navigator/NavBar/NavBar';
 
+// Navigator
 @use './components/Navigator/Navigator.scss';
+
 /* Navigator */
 
 // Items
@@ -31,11 +41,5 @@
 // OrderCreator
 @use './components/OrderCreator/OrderCreator';
 
-// DashBoard
-@use './components/DashBoard/DashBoard';
-
 // CategorySelector
 @use './components/CategorySelector/CategorySelector';
-
-// Searcher
-@use './components/Searcher/Searcher';
