--- a/src/scss/base/_resets.scss
+++ b/src/scss/base/_resets.scss
@@ -5,6 +5,10 @@
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+body {
+  background-color: white;
+}
+
 .App {
   overflow-x: hidden;
   overflow-y: hidden;
