--- a/src/components/Items/_Items.scss
+++ b/src/components/Items/_Items.scss
@@ -1,32 +1,34 @@
-.card-btn-item {
-  width: 1;
-  height: 1;
+.items-card-container {
+  .card-btn-item {
+    .card-item {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      height: 25rem;
+      width: 100%;
+    }
 
-  .card-item {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-content: center;
-    align-items: center;
-    height: 30rem;
-
-    .items-img-container {
+    .item-img-card-content {
       display: flex;
       justify-content: center;
       align-items: center;
+    }
 
-      .item-img-card-content {
-        grid-row: 1;
-        grid-column: 1;
-        gap: 1rem;
-        justify-content: center;
-        align-items: center;
+    img {
+      object-fit: contain;
+    }
 
-        > img {
-          width: 100%;
-          height: 100%;
-          object-fit: contain;
-        }
-      }
+    .card-item-title {
+      font-weight: 500;
+      font-size: auto;
+      text-align: center;
+    }
+
+    .card-item-price {
+      font-weight: 600;
+      font-size: auto;
+      align-self: flex-start;
     }
   }
 }
