--- a/src/components/Navigator/Header/_Header.scss
+++ b/src/components/Navigator/Header/_Header.scss
@@ -1,73 +1,53 @@
 header {
   .header-grid-container {
-    justify-content: space-around;
+    justify-content: space-between;
     align-content: center;
+    align-items: center;
     height: 2.5rem;
 
     @media (max-width: 600px) {
       height: 4.5rem;
       flex-direction: column;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-    }
-
-    .header-grid-items {
-      border-radius: 0;
-      display: flex;
-      align-items: center;
-      height: 2rem;
-
-      @media (max-width: 600px) {
-        margin-bottom: 3px;
-        height: 2rem;
-        justify-content: center;
-      }
-
-      .header-toolbar {
-        border-radius: 0;
-        padding: 0;
-        margin: 0;
-        height: 2rem;
-
-        .header-menu-items {
-          display: flex;
-          justify-content: space-around;
-          align-items: center;
-          height: 2.5rem;
-          width: auto;
-          min-width: auto;
-          border-radius: 0;
-
-          @media (max-width: 600px) {
-            height: 2rem;
-            min-width: auto;
-            justify-content: center;
-            align-items: center;
-          }
-
-          .cart-btn {
-            height: 2.5rem;
-            width: 5rem;
-            border-radius: 0;
-
-            @media (max-width: 600px) {
-              width: 3rem;
-              height: 2rem;
-            }
-          }
-        }
-      }
     }
   }
-}
 
-// CartContext
-.cart-icon {
-  height: 2.5rem;
-  width: 2.5rem;
-  border-radius: 0;
-  @media (max-width: 600px) {
-    width: 2.5rem;
-    height: 2rem;
+  .header-grid-items {
+    display: flex;
+    align-items: center;
+
+    @media (max-width: 600px) {
+      margin-bottom: 3px;
+      height: 2rem;
+      justify-content: space-between;
+    }
+  }
+
+  .header-menu-items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: auto;
+    height: auto;
+    width: auto;
+    min-width: auto;
+    border-radius: 0;
+    padding: 0;
+
+    li {
+      padding: 0;
+    }
+  }
+
+  .cart-btn {
+    height: 2.5rem;
+    width: 5rem;
+    border-radius: 0;
+
+    @media (max-width: 600px) {
+      width: 3rem;
+      height: 2rem;
+    }
   }
 }
