--- a/src/components/Navigator/Header/Searcher/_Searcher.scss
+++ b/src/components/Navigator/Header/Searcher/_Searcher.scss
@@ -4,10 +4,9 @@
   border-radius: 0;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.15);
-  width: 100%;
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.3);
   }
 
   @media (max-width: 600px) {
@@ -15,13 +14,11 @@
     height: 2rem;
   }
   @media (min-width: 600px) {
-    margin-left: 8px;
     width: auto;
   }
 }
 
 .search-icon-wrapper {
-  padding: 0 16px;
   height: inherit;
   position: absolute;
   pointer-events: none;
@@ -36,13 +33,11 @@
   justify-content: center;
 
   & .MuiInputBase-input {
-    line-height: inherit;
-    padding: 8px 8px 8px 0;
-    padding-left: calc(1em + 32px);
+    text-indent: calc(1em + 16px);
     transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     width: 100%;
+    align-items: center;
     text-align: start;
-    height: inherit;
 
     @media (max-width: 600px) {
       width: 100%;
