--- a/src/scss/base/_resets.scss
+++ b/src/scss/base/_resets.scss
@@ -2,17 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-body {
-  background-color: white;
-}
-
-.App {
-  overflow-x: hidden;
-  overflow-y: hidden;
-  text-align: center;
+  font-family: 'Poppins', sans-serif;
 }
 
 li {
