--- a/src/components/Items/_Items.scss
+++ b/src/components/Items/_Items.scss
@@ -1,34 +1,58 @@
 .items-card-container {
-  .card-btn-item {
-    .card-item {
+  .card-item {
+    max-height: 30rem;
+    min-height: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .card-content-container {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      height: 25rem;
-      width: 100%;
-    }
+      flex-grow: 1;
 
-    .item-img-card-content {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+      .item-card-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-    img {
-      object-fit: contain;
-    }
+        img {
+          object-fit: contain;
+        }
+      }
 
-    .card-item-title {
-      font-weight: 500;
-      font-size: auto;
-      text-align: center;
-    }
+      .card-item-title,
+      .card-item-rating,
+      .card-item-price {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 3rem;
+        font-size: 100%;
+        word-wrap: break-word;
+        text-align: center;
+      }
 
-    .card-item-price {
-      font-weight: 600;
-      font-size: auto;
-      align-self: flex-start;
+      .card-item-title {
+        font-weight: 500;
+      }
+
+      .card-item-price {
+        font-weight: 600;
+      }
+
+      .card-item-rating {
+        color: gray;
+      }
+
+      .item-btn {
+        display: flex;
+        width: 100%;
+        padding: 0;
+        button {
+          border-radius: 0;
+        }
+      }
     }
   }
 }
