--- a/src/components/Items/_Items.scss
+++ b/src/components/Items/_Items.scss
@@ -1,56 +1,66 @@
 .items-card-container {
   .card-item {
-    max-height: 30rem;
     min-height: 0;
+    max-height: 25rem;
     width: 100%;
     display: flex;
     flex-direction: column;
+    border-radius: 0;
 
     .card-content-container {
       display: flex;
       flex-direction: column;
       flex-grow: 1;
+      border-radius: 0;
 
-      .item-card-img {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+      .item-action-area {
+        height: auto;
+        border-radius: 0;
 
-        img {
-          object-fit: contain;
+        .item-card-img {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          img {
+            object-fit: contain;
+          }
         }
-      }
 
-      .card-item-title,
-      .card-item-rating,
-      .card-item-price {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 3rem;
-        font-size: 100%;
-        word-wrap: break-word;
-        text-align: center;
-      }
+        .card-item-title,
+        .card-item-rating,
+        .card-item-price {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 3rem;
+          word-wrap: break-word;
+          text-align: center;
+        }
 
-      .card-item-title {
-        font-weight: 500;
-      }
+        .card-item-title {
+          font-size: 100%;
+          font-weight: 500;
+          white-space: nowrap;
+        }
 
-      .card-item-price {
-        font-weight: 600;
-      }
+        .card-item-price {
+          font-weight: bold;
+        }
 
-      .card-item-rating {
-        color: gray;
-      }
+        .card-item-rating {
+          font-size: 0.7rem;
+          color: gray;
+        }
 
-      .item-btn {
-        display: flex;
-        width: 100%;
-        padding: 0;
-        button {
+        .item-btn {
+          display: flex;
+          width: 100%;
+          padding: 0;
           border-radius: 0;
+          button {
+            border-radius: 0;
+          }
         }
       }
     }
