Shop component created, and minor changes on the interface

--- a/src/components/CategorySelector/_CategorySelector.scss
+++ b/src/components/CategorySelector/_CategorySelector.scss
@@ -1,10 +1,10 @@
 .category-selector-container {
-    width: 12rem;
+    width: 15rem;
 }
 
-.categories-options-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.category-selector-options {
+    padding: 0;
+    margin: 0;
+    text-align: center;
     height: 3rem;
 }
